Finished adding the blog and job functionality

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+{% load staticfiles %}
 
 <head>
   <meta charset="utf-8">
@@ -20,39 +21,22 @@
 <body>
 
   <header>
-    <div class="collapse bg-dark" id="navbarHeader">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
-            <h4 class="text-white">About</h4>
-            <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
-          </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4 class="text-white">Contact</h4>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Follow on Twitter</a></li>
-              <li><a href="#" class="text-white">Like on Facebook</a></li>
-              <li><a href="#" class="text-white">Email me</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Efosa</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Efosa</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Projects <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="{% static 'CV_EN_Efosa_Igbinehi.pdf' %}">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
@@ -81,11 +65,11 @@
             <div class="card mb-4 box-shadow">
               <img class="card-img-top img-fluid" src="{{ blog.image.url }}" alt="Card image cap" height="300">
               <div class="card-body">
-                <a href="#"><h2>{{ blog.title }}</h2></a>
+                <a href="{% url 'detail' blog.id %}"><h2>{{ blog.title }}</h2></a>
                 <p class="small">{{ blog.pub_date }}</p>
                 <p class="card-text">{{ blog.body|truncatewords:20 }}</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="#" class="btn btn-dark">Read More
+                  <a href="{% url 'detail' blog.id %}" class="btn btn-dark">Read More
                   </a>
                 </div>
               </div>
